<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textMyTodos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_22sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/activity_main_text_my_todo_text"
        android:textColor="@color/black"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/imageAddTodo2"
        android:layout_width="@dimen/_23sdp"
        android:layout_height="@dimen/_23sdp"
        android:layout_marginStart="96dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_todo"
        app:layout_constraintBottom_toBottomOf="@+id/textMyTodos"
        app:layout_constraintStart_toStartOf="@+id/textMyTodos"
        app:layout_constraintTop_toTopOf="@+id/textMyTodos"
        app:layout_constraintVertical_bias="1.0"
        app:tint="@color/colorIcons" />

    <View
        android:id="@+id/viewDivider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@color/DivideColor"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/textMyTodos" />

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textMyTodos">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            app:tint="@color/colorSearchIcon" />

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/activity_main_input_search_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/colorWhiteTextColor"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todosRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch" />

    <LinearLayout
        android:id="@+id/layoutQuickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorQuickActionBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/imageAddTodoMain"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutQuickActions"
        app:tint="@color/colorPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>